--- a/css/style.css
+++ b/css/style.css
@@ -1626,12 +1626,11 @@ span.minus {
     padding-bottom: 50px;
 }
 tr.tr-container {
-    margin: 15px 15px;
     background-color: #f5fdff;
 }
-.td-background {
-
-}
+.td-height {
+    vpadding-top: 10px;
+   }
 
 .del-img {
     padding: 10px 23px;
@@ -1639,9 +1638,146 @@ tr.tr-container {
 tr {
     margin-bottom: 10px;
 }
-td {
-    padding: 24px 0 24px 0
-}
+
 .td-height {
-    height: ;
+    padding: 20px 0 0 0;
+
+}
+#popup-demo {
+    /*margin-top: 100px; */
+    background-color: indianred;
+    border: 1px red solid;
+    width: 60px;
+    min-height: 93px;
+    max-width: 80%;
+    max-height: 80%;
+    padding: 20px;
+    position: fixed;
+    opacity: 0;
+    visibility: hidden;
+
+}
+/*#popup-demo a {
+    position: fixed;
+    background: rgba(0, 0, 0, 0.3);
+    transition: opacity 500ms;
+    visibility: hidden;
+    opacity: 0;
+    z-index: 3;
+} */
+
+#popup-demo:target {
+    visibility: visible;
+    opacity: 1;
+}
+#login img {
+
+    display: block;
+}
+
+#slider-wrap {
+    margin: 0 auto;
+}
+
+#slider {
+    margin-top: 50px;
+}
+.arrow-left {
+
+}
+.inner-slider {
+    width: 100%;
+
+}
+.slide-picture + img {
+    opacity: 0;
+    position: absolute;
+    transition: opacity 0.5s  ;
+}
+.slide-picture:checked + img {
+    opacity: 1;
+}
+.wrap-login {
+    margin-top: 150px;
+    width: 450px;
+    height: 755px;
+    border: red 1px solid;
+}
+.inner-login-form {
+    padding-left: 50px;
+}
+.inner-login-form {
+    width: 100%;
+}
+.inner-login-enter {
+    width: 100%;
+}
+.inner-checkbox-remember {
+    font-family: 'Lato', sans-serif;
+    font-size: 16px;
+    color: #45474b;
+    width: 120px;
+    display: inline-block;
+    margin: 0 50px 0 50px;
+    font-weight: 500;
+}
+.forgot-password {
+    font-weight: 500;
+    width: 120px;
+    display: inline-block;
+    font-family: 'Lato', sans-serif;
+    font-size: 16px;
+    color: #45474b;
+    margin: 0 50px 0 50px;
+}
+.sign-in input {
+    display: inline-block;
+    width: 100px;
+    margin: 0 175px;
+    font-family: 'Lato', sans-serif;
+    font-size: 16px;
+    font-weight: 500;
+    color: #45474b;
+}
+.create-account {
+    width: 150px;
+    border-bottom: 2px solid #45474b;
+}
+
+.input-create {
+    width: 128px;
+    padding: 0 10px;
+}
+input.input-create {
+    padding: 0 10px 0 10px ;
+    font-family: 'Lato', sans-serif;
+    font-size: 16px;
+    color: #45474b;
+
+}
+.arrow-button:focus {
+    border: none;
+    outline: none;
+}
+
+button.arrow-button {
+    border: none;
+    background-color: white;
+}
+.hr-form {
+    margin-top: 30px;
+    border-bottom: 1px solid #bfbfbf;
+    width: 76%;
+}
+.inner-login-social h3 {
+    margin-top: 30px;
+    text-align: center;
+}
+.login-social {
+    width: 172px;
+    margin: 20px 138px 0 138px;
+}
+.login-social a {
+    padding: 0 20px 0 20px;
+
 }
