--- a/css/style.css
+++ b/css/style.css
@@ -1697,12 +1697,7 @@ tr {
 .slide-picture:checked + img {
     opacity: 1;
 }
-.wrap-login {
-    margin-top: 150px;
-    width: 450px;
-    height: 755px;
-    border: red 1px solid;
-}
+.
 .inner-login-form {
     padding-left: 50px;
 }
@@ -1710,6 +1705,7 @@ tr {
     width: 100%;
 }
 .inner-login-enter {
+    margin-top: 36px;
     width: 100%;
 }
 .inner-checkbox-remember {
@@ -1718,7 +1714,7 @@ tr {
     color: #45474b;
     width: 120px;
     display: inline-block;
-    margin: 0 50px 0 50px;
+    margin: 0 53px 0 54px;
     font-weight: 500;
 }
 .forgot-password {
@@ -1728,18 +1724,22 @@ tr {
     font-family: 'Lato', sans-serif;
     font-size: 16px;
     color: #45474b;
-    margin: 0 50px 0 50px;
+    margin: 0 54px 0 54px;
 }
 .sign-in input {
-    display: inline-block;
-    width: 100px;
-    margin: 0 175px;
     font-family: 'Lato', sans-serif;
     font-size: 16px;
     font-weight: 500;
     color: #45474b;
+    border: 2px solid #45474b;
+    background-color: white;
+    padding: 10px 101px 10px 56px;
+    width: 100px;
+    margin: 50px 158px 0 158px;
+
 }
 .create-account {
+    margin-top: 80px;
     width: 150px;
     border-bottom: 2px solid #45474b;
 }
@@ -1779,5 +1779,56 @@ button.arrow-button {
 }
 .login-social a {
     padding: 0 20px 0 20px;
+}
+.inner-login-email {
+    margin-top: 49px;
+}
+.inner-login-email input{
+    border-bottom: 1px solid #45474b;
+    font-family: 'Lato', sans-serif;
+    font-size: 16px;
+    color: #959ba1;
+    width: 360px;
+    box-sizing: border-box;
+    margin-left: 50px;
+}
+.inner-login-password {
+    margin-top: 43px;
+}
+.inner-login-password input {
+    box-sizing: border-box;
+    margin-left: 50px;
+    border-bottom: 1px solid #45474b;
+    font-family: 'Lato', sans-serif;
+    font-size: 16px;
+    color: #959ba1;
+    width: 360px;
 
+}
+.wrap-login {
+    position: relative;
+    box-shadow:0px 7px 24px #8F8C8D;
+    margin-top: 150px;
+    width: 460px;
+    height: 755px;
+
+}
+.wrap-login-substrate {
+    
+    left: 20px;
+    top: 20px;
+    z-index: 6;
+    height: 755px;
+    box-shadow:0px 0px 10px #8F8C8D;
+    width: 460px;
+    position: absolute;
+
+}
+
+.wrap-login p {
+    padding-top: 75px;
+    text-align: center;
+    font-family: 'Ramaraja', serif;
+    font-size: 42px;
+    color: #555963;
 }
