add form login to userpic

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -128,7 +128,10 @@
     }
 
     /* больше чем 768px */
-    @media only screen and (min-width: 768px) {
+    @media only screen and (min-width: 1280px) {
+        .menu_list {
+            margin-left: 80px;
+        }
 
     }
 
