--- a/css/cs-skin-elastic.css
+++ b/css/cs-skin-elastic.css
@@ -95,6 +95,7 @@ div.cs-skin-elastic {
 	transition: none;
 	-webkit-animation: bounce 0.6s ease-out;
   	animation: bounce 0.6s ease-out;
+	width: 180px;
 }
 
 /* Optional delays (problematic in IE 11/Win) */
@@ -125,10 +126,11 @@ div.cs-skin-elastic {
 .cs-skin-elastic .cs-options span {
 	font-family: 'Lato', sans-serif;
 	font-size: 16px;
+	color: #959ba1;
 	background-repeat: no-repeat;
 	background-position: 1.5em 50%;
 	background-size: 2em auto;
-	padding: 0.8em 1em 0.8em 4em;
+	padding: 5px 0 0 24px;
 }
 
 .cs-skin-elastic .cs-options span:hover,
@@ -141,21 +143,6 @@ div.cs-skin-elastic {
 	content: '';
 }
 
-.cs-skin-elastic .cs-options li.flag-france span {
-	background-image: url(../img/france.svg);
-}
-
-.cs-skin-elastic .cs-options li.flag-brazil span {
-	background-image: url(../img/brazil.svg);
-}
-
-.cs-skin-elastic .cs-options li.flag-safrica span {
-	background-image: url(../img/south-africa.svg);
-}
-
-.cs-skin-elastic .cs-options li.flag-argentina span {
-	background-image: url(../img/argentina.svg);
-}
 
 @-webkit-keyframes expand { 
 	0% { -webkit-transform: scale3d(1,0,1); }
