--- a/css/style.css
+++ b/css/style.css
@@ -917,8 +917,11 @@ span.text_info {
 width: 1060px;
 }
 .popular_book {
+    position: relative;
     padding: 0 40px 0 40px;
-    float: left;
+}
+.popular_book p {
+display: block;
 }
 .publishers {
     margin: 80px auto;
@@ -1150,12 +1153,12 @@ input[type=number] {
     padding: 5px 5px;
 }
 .has-success {
-    color: darkgreen;
+
     border-bottom-color: darkgreen;
 }
 .has-error{
     border-bottom-color: red;
-    color: red;
+
 }
 button.subscribe_button{
     background-color: #f2fdff;
@@ -1621,12 +1624,15 @@ span.minus {
     padding-right: 13px;
 }
 .name-book {
-    padding-bottom: 50px;
+    padding-bottom: 40px;
 }
 tr.tr-container {
     background-color: #f5fdff;
+    height: 130px;
 }
-
+.img-table {
+    padding-top: 10px;
+}
 .del-img {
     padding: 10px 23px;
 }
@@ -1754,7 +1760,14 @@ a.input-create {
     color: #45474b;
     font-family: 'Lato', sans-serif;
     font-weight: 500;
+    transition: color 0.5s ease;
 }
+
+a.input-create:hover {
+    color: #da8913;
+    border-bottom: 2px solid #da8913;
+}
+
 .input-create img {
     padding: 0 0 0 15px;
 }
@@ -1870,7 +1883,31 @@ button.arrow-button {
     font-size: 42px;
     color: #555963;
 }
-.nature {  position: relative;  margin-bottom: 1em;  }
-.nature .transp-back {  width: 530px;  height: 100px;  position: absolute;  margin: 50px;  padding: 10px;  background-color: #fff;  filter:progid:DXImageTransform.Microsoft.Alpha(opacity=80);
-    /* IE 5.5+*/  -moz-opacity: 0.8; /* Mozilla 1.6 и ниже */  -khtml-opacity: 0.8; /* Konqueror 3.1, Safari 1.1 */  opacity: 0.8; /* CSS3 - Mozilla 1.7b +, Firefox 0.9 +, Safari 1.2+, Opera 9 */  }
-.nature .content {  width: 480px;  position: absolute;  padding: 70px 70px 50px 90px;  }
+.cover1 {
+    box-shadow: 0 0 50px rgba(0,0,0,0.5);
+    top: 74px;
+    left: 11px;
+    position: absolute;
+}
+.cover2 {
+    box-shadow: 0 0 50px rgba(0,0,0,0.5);
+    top: 34px;
+    left: 25px;
+    position: absolute;
+}
+.cover3 {
+    box-shadow: 0 0 50px rgba(0,0,0,0.5);
+    position: absolute;
+
+}
+.del {
+    border: none;
+}
+.add {
+    border: none;
+}
+
+
+
+
+
