--- a/css/style.css
+++ b/css/style.css
@@ -922,6 +922,7 @@ width: 1060px;
     display: inline-block;
     padding: 0 40px 0 40px;
 }
+
 .popular_book img {
 
 }
@@ -1163,12 +1164,12 @@ input[type=number] {
     padding: 5px 5px;
 }
 .has-success {
-
+    color: darkgreen;
     border-bottom-color: darkgreen;
 }
 .has-error{
+    color: red;
     border-bottom-color: red;
-
 }
 button.subscribe_button{
     background-color: #f2fdff;
@@ -1695,10 +1696,14 @@ tr {
     max-height: 560px;
 }
 #slider-wrap-popularseries {
+    margin-top: 500px;
     width: 100%;
-    max-height: 500px;
+    height: 500px;
 }
 #slider {
+    margin-top: 50px;
+}
+#slider-popular {
     margin-top: 50px;
 }
 .arrow-left {
@@ -1713,10 +1718,17 @@ tr {
     position: absolute;
     transition: opacity 0.5s  ;
 }
+.slide-picture + .popular_book {
+    opacity: 0;
+    position: absolute;
+    transition: opacity 0.5s  ;
+}
 .slide-picture:checked + img {
     opacity: 1;
 }
-
+.slide-picture:checked + .popular_book {
+    opacity: 1;
+}
 /*.inner-login-form {
     width: 100%;
    } */
