--- a/css/responsive.css
+++ b/css/responsive.css
@@ -32,6 +32,9 @@
         .form-cart {
            width: calc(100%-10px);
         }
+        .wrap-footer {
+            width: 100%;
+        }
     }
 
     @media all and (max-width: 1200px){
@@ -125,6 +128,9 @@
         .coupon-code input {
             width: 120px;
         }
+        .wrap-footer {
+            width: 100%;
+        }
     }
 
     /* больше чем 768px */
@@ -132,6 +138,44 @@
         .menu_list {
             margin-left: 80px;
         }
+        .wrap-footer {
+            width: 100%;
+        }
+    }
+
+    @media
+    only screen and (max-width: 760px),
+    (min-device-width: 768px) and (max-device-width: 1024px)  {
+
+        /* Force table to not be like tables anymore */
+        table, thead, tbody, th, td, tr {
+            display: block;
+        }
+
+        /* Hide table headers (but not display: none;, for accessibility) */
+        .table-header {
+            position: absolute;
+            top: -9999px;
+            left: -9999px;
+        }
+
+        td {
+            /* Behave  like a "row" */
+            position: relative;
+            padding-left: 50%;
+        }
+
+        td:before {
+            /* Now like a table header */
+            position: absolute;
+            /* Top/left values mimic padding */
+            top: 6px;
+            left: 6px;
+            width: 45%;
+            padding-right: 10px;
+            white-space: nowrap;
+        }
+
 
     }
 
@@ -147,7 +191,6 @@
 
     /* For devices 400px and larger: */
     @media only screen and (min-device-width: 400px) {
-
     }
 
 
