--- a/css/responsive.css
+++ b/css/responsive.css
@@ -193,6 +193,37 @@
     @media only screen and (min-device-width: 400px) {
     }
 
+    @media screen and (max-width: 30em) {
+        div.cs-skin-elastic { font-size: 1em; }
+    }
+
+    .cs-skin-elastic > span {
+        color: #959ba1;
+        font-family: 'Lato', sans-serif;
+        font-size: 16px;
+        background-color: #fff;
+        z-index: 100;
+    }
+
+    .cs-skin-elastic > span::after {
+        font-family: 'Lato', sans-serif;
+        font-size: 16px;
+        content: '';
+        background-image: url("../img/shape19.png");
+        width: 14px;
+        height: 8px;
+        -webkit-backface-visibility: hidden;
+        backface-visibility: hidden;
+    }
+
+    .cs-skin-elastic .cs-options {
+        overflow: visible;
+        background: transparent;
+        opacity: 1;
+        visibility: visible;
+        padding-bottom: 1.25em;
+        /* pointer-events: none; */
+    }
 
 /*
 <div class="creditcard">
