--- a/css/style.css
+++ b/css/style.css
@@ -282,7 +282,7 @@ width: 100%;
 .container_button a {
     transition: 5s ease color;
 }
-button.btn:hover {
+.btn:hover {
     font-family: 'Lato', sans-serif;
     font-size: 16px;
     text-align: center;
@@ -291,10 +291,9 @@ button.btn:hover {
     text-decoration: none;
     padding: 10px 60px;
     border: 2px solid #555963;
-    /*background: white;*/
     background: #da8913
 }
-input.btn:hover {
+.btn:hover {
     font-family: 'Lato', sans-serif;
     font-size: 16px;
     text-align: center;
@@ -302,7 +301,6 @@ input.btn:hover {
     color: #45474b;
     text-decoration: none;
     border: 2px solid #555963;
-    /*background: white;*/
     background: #da8913;
 }
 
@@ -609,9 +607,6 @@ span.font_slider_grey {
     font-size: 57px;
 }
 
-
-
-
 span.book_series_fonts {
     font-family: 'Ramaraja', serif;
     font-size: 23px;
@@ -629,8 +624,6 @@ span.book_series_fonts {
     margin: 210px 0 0 0;
     width: 100%;
 }
-
-
 /* ---- font amiri --- */
 
 h1 {
@@ -670,22 +663,13 @@ h2 {
     font-size: 15px;
     color: #dd9327;
 }
-/*span.font-autor {
-    font-family: 'Amiri', serif;
-    font-size: 15px;
-    color: #dd9327;
-} */
+
 .font-book-size {
     font-family: 'Lato', sans-serif;
     font-size: 15px;
     color: #555963;
 }
-/*span.font-number {
-    font-family: 'Yrsa', serif;
-    font-size: 25px;
-    color: #555963;
-    font-weight: 400;
-} */
+
 .font-money {
     font-family: 'Yrsa', serif;
     font-size: 25px;
@@ -756,9 +740,7 @@ span.font_yrsa {
     line-height: 32px;
     color: #555963;
 }
-span.font_menu {
 
-}
 span.books_font_grey {
     font-family: 'Ramaraja', serif;
     font-size: 21px;
@@ -920,7 +902,7 @@ span.text_info {
     height: 10px;
 }
 .container_slider {
-width: 1060px;
+    width: 1060px;
 }
 .popular_book {
     position: relative;
@@ -1015,7 +997,6 @@ background-color: #f2fdff;;
 .section_about_header {
     width: 73%;
     margin: 95px 0 0 0;
-
 }
 
 .section_about_header p {
@@ -1024,7 +1005,6 @@ background-color: #f2fdff;;
     color: #555963;
     font-size: 19px;
     line-height: 26px;
-
 }
 .footer_section_box {
     width: 100%;
@@ -1055,9 +1035,7 @@ background-color: #f2fdff;;
 button[type=submit]:hover {
     border: none;
 }
-.subscribe_form {
 
-}
 .subscribe_form {
     width: auto;
     height: 50px;
@@ -1081,12 +1059,6 @@ button[type=submit]:hover {
     vertical-align: middle;
 }
 
-/* input[type=email] {
-    border: none;
-    padding: 5px 0;
-    outline: none;
-    box-sizing: border-box;
-} */
 .input-text input {
     border: none;
     padding: 5px 0;
@@ -1097,11 +1069,7 @@ button[type=submit]:hover {
     border-color: #da8913;
     color: #da8913;
 }
-/*
-input[type=email]:focus {
-    border-color: #da8913;
-    color: #da8913;
-} */
+
 .input-text input:active {
     border-color: #959ba1;
     color: #959ba1;
@@ -1679,7 +1647,7 @@ button.subscribe_button::after {
     font-size: 25px;
     color: #555963;
 }
-span.minus {
+.minus {
     padding-right: 13px;
 }
 
@@ -2138,7 +2106,7 @@ div.cs-active {
     cursor: default;
 }
 
-div.cs-skin-elastic {
+div.cs-skin-country {
     background: transparent;
 
 }
@@ -2149,7 +2117,7 @@ div.cs-skin-elastic {
     pointer-events: auto;
 } */
 
-.cs-skin-elastic .cs-options > ul::before {
+.cs-skin-country .cs-options > ul::before {
     content: '';
     position: absolute;
     width: 100%;
@@ -2165,7 +2133,7 @@ div.cs-skin-elastic {
     transition: transform 0.3s;
 }
 
-.cs-skin-elastic.cs-active .cs-options > ul::before {
+.cs-skin-country.cs-active .cs-options > ul::before {
     -webkit-transform: scale3d(1,1,1);
     transform: scale3d(1,1,1);
     -webkit-transition: none;
@@ -2174,7 +2142,7 @@ div.cs-skin-elastic {
     animation: expand 0.6s ease-out;
 }
 
-.cs-skin-elastic .cs-options ul li {
+.cs-skin-country .cs-options ul li {
     opacity: 0;
     -webkit-transform: translate3d(0,-25px,0);
     transform: translate3d(0,-25px,0);
@@ -2182,7 +2150,7 @@ div.cs-skin-elastic {
     transition: opacity 0.15s, transform 0.15s;
 }
 
-.cs-skin-elastic.cs-active .cs-options ul li {
+.cs-skin-country.cs-active .cs-options ul li {
     -webkit-transform: translate3d(0,0,0);
     transform: translate3d(0,0,0);
     opacity: 1;
@@ -2194,7 +2162,7 @@ div.cs-skin-elastic {
 }
 
 
-.cs-skin-elastic .cs-options span {
+.cs-skin-country .cs-options span {
     font-family: 'Lato', sans-serif;
     font-size: 16px;
     color: #959ba1;
@@ -2204,13 +2172,13 @@ div.cs-skin-elastic {
     padding: 5px 0 0 24px;
 }
 
-.cs-skin-elastic .cs-options span:hover,
-.cs-skin-elastic .cs-options li.cs-focus span,
-.cs-skin-elastic .cs-options .cs-selected span {
+.cs-skin-country .cs-options span:hover,
+.cs-skin-country .cs-options li.cs-focus span,
+.cs-skin-country .cs-options .cs-selected span {
     color: #1e4c4a;
 }
 
-.cs-skin-elastic .cs-options .cs-selected span::after {
+.cs-skin-country .cs-options .cs-selected span::after {
     content: '';
 }
 
