--- a/css/style.css
+++ b/css/style.css
@@ -1961,6 +1961,9 @@ div.cs-select:focus {
 
 /* Placeholder and selected option */
 .cs-select > span {
+    font-family: 'Lato', sans-serif;
+    color: #959ba1;
+    font-size: 16px;
     border-bottom: 1px solid #555963;
     padding-right: 3em;
 
